tests/errors/syntax/namespace-unclosed.fn
---
Description: Namespace with opening brace but no close
Expected: FN1018
---

namespace Broken
{

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
